crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__array_new_fixed.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 23
        },
        "end": {
          "line": 7,
          "character": 25
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected unsigned integer"
    }
  ]
}
