crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__call_indirect_incorrect.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 18
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 18
        },
        "end": {
          "line": 6,
          "character": 21
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 22
        },
        "end": {
          "line": 6,
          "character": 23
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 18
        },
        "end": {
          "line": 8,
          "character": 21
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 22
        },
        "end": {
          "line": 8,
          "character": 29
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 20
        },
        "end": {
          "line": 10,
          "character": 23
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    }
  ]
}
