crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__float.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected floating-point number"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 9
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing floating-point number"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 9
        },
        "end": {
          "line": 6,
          "character": 18
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing floating-point number"
    }
  ]
}
