crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__i8x16_shuffle.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 9,
          "character": 4
        },
        "end": {
          "line": 9,
          "character": 57
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected 16 lane indices in `i8x16.shuffle`, found 17"
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 4
        },
        "end": {
          "line": 13,
          "character": 53
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected 16 lane indices in `i8x16.shuffle`, found 15"
    }
  ]
}
