crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__memory_copy.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 12,
          "character": 4
        },
        "end": {
          "line": 12,
          "character": 15
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 22,
          "character": 4
        },
        "end": {
          "line": 22,
          "character": 15
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 22,
          "character": 16
        },
        "end": {
          "line": 22,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 18
        },
        "end": {
          "line": 27,
          "character": 21
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 16
        },
        "end": {
          "line": 32,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 20
        },
        "end": {
          "line": 32,
          "character": 23
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    }
  ]
}
